# practice

./: CMakeLists.txt  Main.qml  main.cpp  vstestdata.js
utils/: KeyAnalysis.qml  Result.qml  ShortcutView.qml  Testground.qml
